Remove unused code and update image links in index.html and style.css

--- a/index.html
+++ b/index.html
@@ -339,67 +339,60 @@
         <!--   === Headings Text Ends ===   -->
 
         <main class="mainContainer">
-          <!--   === Buttons Group Starts ===   -->
-          <div class="button-group">
-            <button class="button active" data-filter="*">All</button>
-            <button class="button" data-filter=".design">Design</button>
-            <button class="button" data-filter=".code">Development</button>
-            <button class="button" data-filter=".logo">Logo</button>
-          </div>
-          <!--   === Buttons Group Ends ===   -->
-
           <!--   === Gallery Starts ===   -->
           <div class="gallery">
             <!--   === Item1 Starts ===   -->
-            <div class="item design">
+            <div class="item">
               <img src="images/img1.png" />
               <div class="overlay">
-                <a href="images/design1.jpg">VIEW MORE</a>
+                <a href="https://filmy-verse-pi.vercel.app/" target="_blank"
+                  >Visit Now</a
+                >
               </div>
             </div>
             <!--   === Item1 Ends ===   -->
 
             <!--   === Item2 Starts ===   -->
-            <div class="item design">
-              <img src="images/img2.webp" />
+            <div class="item">
+              <img src="images/img6.jpg" />
               <div class="overlay">
-                <a href="">VIEW MORE</a>
+                <a href="https://amazonclonebyimran.netlify.app/">Visit Now</a>
               </div>
             </div>
             <!--   === Item2 Ends ===   -->
 
             <!--   === Item3 Starts ===   -->
-            <div class="item code">
-              <img src="images/website1.jpg" />
+            <div class="item">
+              <img src="images/img3.jpg" />
               <div class="overlay">
-                <a href="images/website1.jpg">VIEW MORE</a>
+                <a href="https://clonebyimran.netlify.app/">Visit Now</a>
               </div>
             </div>
             <!--   === Item3 Ends ===   -->
 
             <!--   === Item4 Starts ===   -->
-            <div class="item code">
-              <img src="images/website2.jpg" />
+            <div class="item">
+              <img src="images/img2.webp" />
               <div class="overlay">
-                <a href="images/website2.jpg">VIEW MORE</a>
+                <a href="">VIEW MORE</a>
               </div>
             </div>
             <!--   === Item4 Ends ===   -->
 
             <!--   === Item5 Starts ===   -->
-            <div class="item code">
-              <img src="images/website3.jpg" />
+            <div class="item">
+              <img src="images/img5.png" />
               <div class="overlay">
-                <a href="images/website3.jpg">VIEW MORE</a>
+                <a href="">VIEW MORE</a>
               </div>
             </div>
             <!--   === Item5 Ends ===   -->
 
             <!--   === Item6 Starts ===   -->
-            <div class="item logo">
-              <img src="images/logo1.jpg" />
+            <div class="item">
+              <img src="images/img6.jpg" />
               <div class="overlay">
-                <a href="images/logo1.jpg">VIEW MORE</a>
+                <a href="">VIEW MORE</a>
               </div>
             </div>
             <!--   === Item6 Ends ===   -->
