--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           </div>
 
           <div class="hero-image">
-            <img src="images/pic.png" />
+            <img src="Assets//pic.png" />
           </div>
         </div>
         <!--   === Hero Ends ===   -->
@@ -115,7 +115,7 @@
       <section class="about" id="about">
         <!--   === About Image Starts ===    -->
         <div class="about-image">
-          <img src="images/pic.jpg" />
+          <img src="Assets//pic.jpg" />
           <div class="social-media">
             <a
               href="https://www.facebook.com/profile.php?id=100052821680235&mibextid=ZbWKwL"
@@ -159,7 +159,9 @@
             <div><span>Email:</span><span>imran.sahadvi@gmail.com</span></div>
             <div><span>Hobby:</span><span>Cricket</span></div>
           </div>
-          <button class="btn download-btn">Download CV</button>
+          <a href="Assets//It's Imran CV.pdf" download="It's Imran CV"
+            ><button class="btn download-btn">Download CV</button></a
+          >
         </div>
         <!--   === About Description Ends ===   -->
       </section>
@@ -343,7 +345,7 @@
           <div class="gallery">
             <!--   === Item1 Starts ===   -->
             <div class="item">
-              <img src="images/img1.png" />
+              <img src="Assets//img1.png" />
               <div class="overlay">
                 <a href="https://filmy-verse-pi.vercel.app/" target="_blank"
                   >Visit Now</a
@@ -354,7 +356,7 @@
 
             <!--   === Item2 Starts ===   -->
             <div class="item">
-              <img src="images/img6.jpg" />
+              <img src="Assets//img6.jpg" />
               <div class="overlay">
                 <a href="https://amazonclonebyimran.netlify.app/">Visit Now</a>
               </div>
@@ -363,7 +365,7 @@
 
             <!--   === Item3 Starts ===   -->
             <div class="item">
-              <img src="images/img3.jpg" />
+              <img src="Assets//img3.jpg" />
               <div class="overlay">
                 <a href="https://clonebyimran.netlify.app/">Visit Now</a>
               </div>
@@ -372,7 +374,7 @@
 
             <!--   === Item4 Starts ===   -->
             <div class="item">
-              <img src="images/img2.webp" />
+              <img src="Assets//img2.webp" />
               <div class="overlay">
                 <a href="">VIEW MORE</a>
               </div>
@@ -381,7 +383,7 @@
 
             <!--   === Item5 Starts ===   -->
             <div class="item">
-              <img src="images/img5.png" />
+              <img src="Assets//img5.png" />
               <div class="overlay">
                 <a href="">VIEW MORE</a>
               </div>
@@ -390,7 +392,7 @@
 
             <!--   === Item6 Starts ===   -->
             <div class="item">
-              <img src="images/img6.jpg" />
+              <img src="Assets//img6.jpg" />
               <div class="overlay">
                 <a href="">VIEW MORE</a>
               </div>
@@ -441,7 +443,7 @@
             </main>
             <div class="profile">
               <div class="profile-image">
-                <img src="images/profile1.jpg" />
+                <img src="Assets//profile2.jpg" />
               </div>
               <div class="profile-desc">
                 <span>John Doe</span>
@@ -475,7 +477,7 @@
             </main>
             <div class="profile">
               <div class="profile-image">
-                <img src="images/profile2.jpg" />
+                <img src="Assets//profile5.jpg" />
               </div>
               <div class="profile-desc">
                 <span>Jane Doe</span>
@@ -509,7 +511,7 @@
             </main>
             <div class="profile">
               <div class="profile-image">
-                <img src="images/profile3.jpg" />
+                <img src="Assets/profile3.jpg" />
               </div>
               <div class="profile-desc">
                 <span>Albert Smith</span>
@@ -543,7 +545,7 @@
             </main>
             <div class="profile">
               <div class="profile-image">
-                <img src="images/profile4.jpg" />
+                <img src="Assets//profile4.jpg" />
               </div>
               <div class="profile-desc">
                 <span>Person Name</span>
@@ -577,7 +579,7 @@
             </main>
             <div class="profile">
               <div class="profile-image">
-                <img src="images/profile5.jpg" />
+                <img src="Assets//profile5.jpg" />
               </div>
               <div class="profile-desc">
                 <span>Person Name</span>
@@ -611,7 +613,7 @@
             </main>
             <div class="profile">
               <div class="profile-image">
-                <img src="images/profile6.jpg" />
+                <img src="Assets//profile6.jpg" />
               </div>
               <div class="profile-desc">
                 <span>Etimad Khan</span>
@@ -645,16 +647,26 @@
               </div>
 
               <div class="inputGroup">
-                <input type="email" name="" required="required" />
+                <input type="email" name="" required />
                 <label>Email</label>
               </div>
             </form>
 
             <div class="contactSocialMedia">
-              <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-              <a href="#"><i class="fa-brands fa-twitter"></i></a>
-              <a href="#"><i class="fa-brands fa-instagram"></i></a>
-              <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+              <a
+                target="_blank" href="https://www.facebook.com/profile.php?id=100052821680235&mibextid=ZbWKwL"
+                ><i class="fa-brands fa-facebook-f"></i
+              ></a>
+              <a target="_blank" href="https://x.com/Imran7808"
+                ><i class="fa-brands fa-twitter"></i
+              ></a>
+              <a
+                target="_blank" href="https://www.instagram.com/yes_itx_imran?igsh=MXVzYXZlYzg5bDc1Mw=="
+                ><i class="fa-brands fa-instagram"></i
+              ></a>
+              <a target="_blank" href="https://www.linkedin.com/in/muhammad-imran-0b6ab32b6"
+                ><i class="fa-brands fa-linkedin-in"></i
+              ></a>
             </div>
           </div>
           <!--   === Left Column Ends ===   -->
@@ -677,8 +689,10 @@
       <!--   *** Footer Section Starts ***   -->
       <section class="page-footer">
         <footer class="footer-contents">
-          <a href="#">Sheraz</a>
-          <p>Created by <span>Sherazi</span> | All rights reserved.</p>
+          <a href="#">Imran</a>
+          <p style="text-align: center">
+            Created by <span>Imran</span> with ♥ | All rights reserved.
+          </p>
         </footer>
       </section>
       <!--   *** Footer Section Ends ***   -->
