--- a/index.html
+++ b/index.html
@@ -343,6 +343,15 @@
         <main class="mainContainer">
           <!--   === Gallery Starts ===   -->
           <div class="gallery">
+              <!--   === Item0 Starts ===   -->
+            <div class="item">
+              <img src="Assets//img0.png" />
+              <div class="overlay">
+                <a href="https://weak-sandals-worm.cyclic.app/" target="_blank">VIEW MORE</a>
+              </div>
+            </div>
+            <!--   === Item0 Ends ===   -->
+
             <!--   === Item1 Starts ===   -->
             <div class="item">
               <img src="Assets//img1.png" />
@@ -389,15 +398,6 @@
               </div>
             </div>
             <!--   === Item5 Ends ===   -->
-
-            <!--   === Item6 Starts ===   -->
-            <div class="item">
-              <img src="Assets//img6.jpg" />
-              <div class="overlay">
-                <a href="">VIEW MORE</a>
-              </div>
-            </div>
-            <!--   === Item6 Ends ===   -->
           </div>
           <!--   === Gallery Ends ===   -->
         </main>
