--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
             <div class="item">
               <img src="Assets//img0.png" />
               <div class="overlay">
-                <a href="https://weak-sandals-worm.cyclic.app/" target="_blank">VIEW MORE</a>
+                <a href="https://sadabhar-online-store.vercel.app/" target="_blank">VIEW MORE</a>
               </div>
             </div>
             <!--   === Item0 Ends ===   -->
