--- a/index.html
+++ b/index.html
@@ -68,11 +68,17 @@
             <h1>I am Muhammad Imran</h1>
             <h2>Mern Stack Web Developer & Designer</h2>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam.
+              I'm a skilled software developer with experience in JavaScript,
+              and expertise in frameworks like React, Node.js, Express.js and
+              MongoDB. I'm a quick learner and collaborate closely with clients
+              to create efficient, scalable, and user-friendly solutions that
+              solve real-world problems. Let's work together to bring your ideas
+              to life!
             </p>
-            <button class="btn hire-btn">Hire Me</button>
+
+            <a href="Assets//It's Imran CV.pdf" download="It's Imran CV">
+              <button class="btn hire-btn">Hire Me</button></a
+            >
           </div>
 
           <div class="hero-image">
@@ -94,7 +100,7 @@
           <div class="career-item">
             <span class="icon"><i class="fa-solid fa-file"></i></span>
             <span class="career-desc">
-              <h2>240+ Projects</h2>
+              <h2>10+ Projects</h2>
               <p>Completed</p>
             </span>
           </div>
@@ -102,7 +108,7 @@
           <div class="career-item">
             <span class="icon"><i class="fa-solid fa-heart"></i></span>
             <span class="career-desc">
-              <h2>200+ Happy</h2>
+              <h2>2+ Happy</h2>
               <p>Clients</p>
             </span>
           </div>
@@ -143,16 +149,7 @@
           <h2>
             Professional MERN Stack Developer having 2+ years of experience
           </h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat.
-          </p>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua.
-          </p>
+          <p>Professional MERN Stack Developer with over 2 years of experience in building and maintaining web applications. I am passionate about creating efficient and scalable solutions, leveraging my expertise in MongoDB, Express.js, React.js, and Node.js.</p>
           <div class="about-personal-info">
             <div><span>Name:</span><span>M Imran</span></div>
             <div><span>Age:</span><span>20 Years</span></div>
@@ -174,8 +171,10 @@
           <h3>Services</h3>
           <h1>I Provide Awesome Services</h1>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            I offer expert Frontend, Backend, and Mobile Development services.
+            My goal is to deliver top-notch solutions tailored to your needs.
+            Check out the services below to see how I can bring your ideas to
+            life.
           </p>
         </header>
         <!--   === Headings Text Ends ===   -->
@@ -184,26 +183,71 @@
         <div class="services-container">
           <div class="service-box">
             <div class="icon-wrapper">
-              <i class="fa-solid fa-palette"></i>
+              <i class="fa-solid fa-code"></i>
             </div>
-            <h2>Web Design</h2>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua.
-            </p>
-            <h3>80+ Projects</h3>
+            <h2>Frontend Development</h2>
+            <ul>
+              <li>
+                <p>
+                  Advanced skills in React.js for building dynamic web
+                  applications.
+                </p>
+              </li>
+              <li>
+                <p>
+                  Proficient in HTML, CSS, and JavaScript for creating
+                  responsive and interactive user interfaces.
+                </p>
+              </li>
+              <li>
+                <p>
+                  Expertise in integrating APIs and third-party services to
+                  enhance functionality.
+                </p>
+              </li>
+              <li>
+                <p>
+                  Strong understanding of web performance optimization and
+                  cross-browser compatibility.
+                </p>
+              </li>
+            </ul>
+            <h3>30+ Projects</h3>
           </div>
 
           <div class="service-box">
             <div class="icon-wrapper">
-              <i class="fa-solid fa-code"></i>
+              <i class="fa-solid fa-server"></i>
             </div>
-            <h2>Web Development</h2>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua.
-            </p>
-            <h3>120+ Projects</h3>
+            <h2>Backend Development</h2>
+            <ul>
+              <li>
+                <p>
+                  Proficient in Node.js for building robust and scalable
+                  server-side applications.
+                </p>
+              </li>
+              <li>
+                <p>
+                  Strong command of Express.js for creating RESTful APIs and
+                  routing.
+                </p>
+              </li>
+              <li>
+                <p>
+                  Experience in using MongoDB and Mongoose, including the
+                  strategic use of indexing, for efficient data modeling,
+                  storage, and retrieval.
+                </p>
+              </li>
+              <li>
+                <p>
+                  Expertise in error handling, debugging, and performance
+                  optimization.
+                </p>
+              </li>
+            </ul>
+            <h3>20+ Projects</h3>
           </div>
 
           <div class="service-box">
@@ -211,11 +255,33 @@
               <i class="fa-solid fa-mobile-screen"></i>
             </div>
             <h2>App Development</h2>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua.
-            </p>
-            <h3>40+ Projects</h3>
+            <ul>
+              <li>
+                <p>
+                  Proficient in developing cross-platform mobile applications
+                  using React Native.
+                </p>
+              </li>
+              <li>
+                <p>
+                  Strong command of native development tools for iOS (Xcode) and
+                  Android (Android Studio).
+                </p>
+              </li>
+              <li>
+                <p>
+                  Experience in building responsive and user-friendly mobile
+                  interfaces.
+                </p>
+              </li>
+              <li>
+                <p>
+                  Expertise in debugging, testing, and performance optimization
+                  for mobile applications.
+                </p>
+              </li>
+            </ul>
+            <h3>2 Projects</h3>
           </div>
         </div>
         <!--   === Services Box Container Ends ===   -->
@@ -228,10 +294,6 @@
         <header class="headings">
           <h3>Resume</h3>
           <h1>Education & Experience</h1>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua.
-          </p>
         </header>
         <!--   === Headings Text Ends ===   -->
 
@@ -245,36 +307,23 @@
 
             <main class="resume-contents">
               <div class="box">
-                <h4>2016 - 2018</h4>
-                <h3>Computer Application (M)</h3>
+                <h4>2021 - 2025</h4>
+                <h3>Bachelor in Computer Science (BSCS)</h3>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                  Ut enim ad minim veniam.
+                  Currently pursuing a Bachelor's degree in Computer Science
+                  from the University of Agriculture Faisalabad with a focus on
+                  software development and programming.
                 </p>
-                <h5 class="vanue">North Euro University</h5>
+                <h5 class="vanue">Faisalabad</h5>
               </div>
-
               <div class="box">
-                <h4>2012 - 2015</h4>
-                <h3>Computer Application (B)</h3>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                  Ut enim ad minim veniam.
-                </p>
-                <h5 class="vanue">North Euro University</h5>
-              </div>
-
-              <div class="box">
-                <h4>2000 - 2012</h4>
+                <h4>2019 - 2021</h4>
                 <h3>High School Degree</h3>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                  Ut enim ad minim veniam.
+                  Completed high school degree in ICS (intermediate in computer)
+                  with 92% marks in Govt. Islamia Graduate college.
                 </p>
-                <h5 class="vanue">Istanbul</h5>
+                <h5 class="vanue">Kasur</h5>
               </div>
             </main>
           </div>
@@ -288,36 +337,26 @@
 
             <main class="resume-contents">
               <div class="box">
-                <h4>2022- 2023</h4>
-                <h3>Senior Web Developer</h3>
+                <h4>Jun 2024- present</h4>
+                <h3>MERN Stack Developer</h3>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                  Ut enim ad minim veniam.
+                  Working as a MERN Stack Developer at <b>Webhive Media</b>. My
+                  responsibilities include developing web applications, creating
+                  RESTful APIs, and managing databases.
                 </p>
-                <h5 class="vanue">Netlink</h5>
+                <h5 class="vanue">Lahore</h5>
               </div>
-
               <div class="box">
-                <h4>2020- 2022</h4>
+                <h4>Sep 2023 - Jan 2024</h4>
                 <h3>Front-End Web Developer</h3>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                  Ut enim ad minim veniam.
+                  Worked as a Front-End Web Developer at
+                  <b>National Incubation Center Faisalabad </b>. My
+                  responsibilities included designing and developing
+                  user-friendly interfaces, creating responsive web designs, and
+                  optimizing web performance.
                 </p>
-                <h5 class="vanue">Development World</h5>
-              </div>
-
-              <div class="box">
-                <h4>2019- 2020</h4>
-                <h3>UI/UX Designer</h3>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                  Ut enim ad minim veniam.
-                </p>
-                <h5 class="vanue">Design House</h5>
+                <h5 class="vanue">NICF</h5>
               </div>
             </main>
           </div>
@@ -334,8 +373,10 @@
           <h3>Portfolio</h3>
           <h1>Some Of My Latest Works</h1>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            Following projects showcases my skills and experience through
+            real-world examples of my work. It reflects my ability to solve
+            complex problems, work with different technologies, and manage
+            projects effectively.
           </p>
         </header>
         <!--   === Headings Text Ends ===   -->
@@ -343,11 +384,15 @@
         <main class="mainContainer">
           <!--   === Gallery Starts ===   -->
           <div class="gallery">
-              <!--   === Item0 Starts ===   -->
+            <!--   === Item0 Starts ===   -->
             <div class="item">
               <img src="Assets//img0.png" />
               <div class="overlay">
-                <a href="https://sadabhar-online-store.vercel.app/" target="_blank">VIEW MORE</a>
+                <a
+                  href="https://sadabhar-online-store.vercel.app/"
+                  target="_blank"
+                  >VIEW MORE</a
+                >
               </div>
             </div>
             <!--   === Item0 Ends ===   -->
@@ -654,17 +699,21 @@
 
             <div class="contactSocialMedia">
               <a
-                target="_blank" href="https://www.facebook.com/profile.php?id=100052821680235&mibextid=ZbWKwL"
+                target="_blank"
+                href="https://www.facebook.com/profile.php?id=100052821680235&mibextid=ZbWKwL"
                 ><i class="fa-brands fa-facebook-f"></i
               ></a>
               <a target="_blank" href="https://x.com/Imran7808"
                 ><i class="fa-brands fa-twitter"></i
               ></a>
               <a
-                target="_blank" href="https://www.instagram.com/yes_itx_imran?igsh=MXVzYXZlYzg5bDc1Mw=="
+                target="_blank"
+                href="https://www.instagram.com/yes_itx_imran?igsh=MXVzYXZlYzg5bDc1Mw=="
                 ><i class="fa-brands fa-instagram"></i
               ></a>
-              <a target="_blank" href="https://www.linkedin.com/in/muhammad-imran-0b6ab32b6"
+              <a
+                target="_blank"
+                href="https://www.linkedin.com/in/muhammad-imran-0b6ab32b6"
                 ><i class="fa-brands fa-linkedin-in"></i
               ></a>
             </div>
